--- a/SurfaceApplication3/EventWindow.xaml
+++ b/SurfaceApplication3/EventWindow.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008"
-        Title="Events" Background="#FF8BBAA5" 
+        Title="Events" Background="#B0CAB8" 
         Height="800" Width="1024"
                  MaxHeight="800" MaxWidth="1024"
         ResizeMode="NoResize"
@@ -24,7 +24,7 @@
         </Style>
         <Style TargetType="s:SurfaceButton">
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="Blue"/>
+            <Setter Property="Foreground" Value="White"/>
             <Setter Property="Background" Value="#FF076F72"/>
             <Setter Property="Padding" Value="8,4" />
             <Setter Property="Margin" Value="4" />
@@ -49,7 +49,7 @@
 
                         </ControlTemplate.Triggers>
 
-                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#FFEDF5E2" BorderThickness="2">
+                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#227174" BorderThickness="2">
                             <ContentPresenter 
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
@@ -67,7 +67,7 @@
         <Canvas>
             <s:SurfaceButton x:Name="addEvent" Content="Add New Event" Foreground="White" Height="46" Canvas.Top="8" Canvas.Left="9" Click="addEvent_Click" Width="146" />
 
-            <s:SurfaceListBox x:Name="EntryListBox" Height="680" Width="995" Canvas.Left="5" Canvas.Top="69" BorderThickness="3" BorderBrush="#FF076F72"/>
+            <s:SurfaceListBox x:Name="EntryListBox" Height="680" Width="995" Canvas.Left="5" Canvas.Top="69" BorderThickness="3" BorderBrush="#227174"/>
             <Label Canvas.Top="8" Canvas.Left="155" Content="Events" Width="691" Height="57" Name="WindowName" FontSize="40" FontWeight="Bold" HorizontalContentAlignment="Center" Background="{x:Null}" Foreground="Black" />
         </Canvas>
 
