--- a/SurfaceApplication3/addHotspotsNontext.xaml
+++ b/SurfaceApplication3/addHotspotsNontext.xaml
@@ -2,13 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:s="http://schemas.microsoft.com/surface/2008"
-        Title="addHotspotsContent" Height="185" Width="600" Background="#FF64907B">
+        Title="addHotspotsContent" Height="185" Width="600" Background="#B0CAB8">
     <Window.Resources>
         
         <Style TargetType="s:SurfaceButton" x:Key="browse">
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="Blue"/>
-            <Setter Property="Background" Value="#FFB5FBE3"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="#227174"/>
+            <Setter Property="BorderBrush" Value="#227174"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="s:SurfaceButton">
@@ -27,7 +28,7 @@
 
 
                         </ControlTemplate.Triggers>
-                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="DarkGreen" BorderThickness="2">
+                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#227174" BorderThickness="2">
                             <ContentPresenter 
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
@@ -41,8 +42,8 @@
 
         <Style TargetType="s:SurfaceButton" x:Key="remove">
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="Blue"/>
-            <Setter Property="Background" Value="#FF076F72"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="#227174"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="s:SurfaceButton">
@@ -59,7 +60,7 @@
                                 </Setter>
                             </Trigger>
                         </ControlTemplate.Triggers>
-                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#FFEDF5E2" BorderThickness="2">
+                        <Border CornerRadius="7" Margin="0" Background="{TemplateBinding Background}" BorderBrush="#227174" BorderThickness="2">
 
                             <ContentPresenter 
                                 HorizontalAlignment="Center"
@@ -78,14 +79,14 @@
     <Grid>
         <Canvas Height="96" VerticalAlignment="Top">
 
-            <Rectangle x:Name="middle_background" Fill="#FFFDF3E2" Height="101" Stroke="#FFF3F3CE" Width="550" Canvas.Top="5" Canvas.Left="13"/>
-            <s:SurfaceButton Style="{StaticResource browse}"  Content="OK" Canvas.Left="214" Canvas.Top="114" Width="76" Height="30" Foreground="Black" Margin="1" BorderBrush="#FF076F72" BorderThickness="10"  MinHeight="0" MinWidth="0" Click="OK_Click" />
-            <s:SurfaceButton Style="{StaticResource browse}"  Content="Cancel" Canvas.Left="296" Canvas.Top="114" Width="96" Height="30" Foreground="Black" Margin="1" BorderBrush="#FF076F72" BorderThickness="10"  MinHeight="0" MinWidth="0" Click="Cancel_Click" />
+            <Rectangle x:Name="middle_background" Fill="White" Height="101" Width="550" Canvas.Top="5" Canvas.Left="13"/>
+            <s:SurfaceButton Style="{StaticResource browse}"  Content="OK" Canvas.Left="214" Canvas.Top="114" Width="76" Height="30" Margin="1" BorderThickness="10"  MinHeight="0" MinWidth="0" Click="OK_Click" />
+            <s:SurfaceButton Style="{StaticResource browse}"  Content="Cancel" Canvas.Left="296" Canvas.Top="114" Width="96" Height="30" Margin="1" BorderThickness="10"  MinHeight="0" MinWidth="0" Click="Cancel_Click" />
             <Label Content="Caption:" Canvas.Left="10" Canvas.Top="21" Width="90" Height="29" Foreground="Black" />
             <Label Content="URL:" Canvas.Left="29" Canvas.Top="71" Width="76" Height="29" Foreground="Black" />
-            <s:SurfaceTextBox x:Name="title" Height="32" Width="362" BorderBrush="#FF076F72" BorderThickness="2" Canvas.Left="90" Canvas.Top="18" Background="#FFFDF3E2" Foreground="Black" FontSize="15" MinHeight="0" MinWidth="0" />
-            <s:SurfaceTextBox x:Name="url_tag" Height="32" Width="362" BorderBrush="#FF076F72" BorderThickness="2" Canvas.Left="90" Canvas.Top="68" Background="#FFFDF3E2" Foreground="Black" FontSize="15" MinHeight="0" MinWidth="0" IsReadOnly="True"/>
-            <s:SurfaceButton x:Name="Browse" Style="{StaticResource browse}" Content="Browse" Width="100" MinHeight="0" Height="30" Foreground="Black" Canvas.Top="68" Canvas.Right="20" Click="Browse_Click" />
+            <s:SurfaceTextBox x:Name="title" Height="32" Width="362" BorderBrush="#227174" BorderThickness="2" Canvas.Left="90" Canvas.Top="18" Background="#FFFDF3E2" Foreground="Black" FontSize="15" MinHeight="0" MinWidth="0" />
+            <s:SurfaceTextBox x:Name="url_tag" Height="32" Width="362" BorderBrush="#227174" BorderThickness="2" Canvas.Left="90" Canvas.Top="68" Background="#FFFDF3E2" Foreground="Black" FontSize="15" MinHeight="0" MinWidth="0" IsReadOnly="True"/>
+            <s:SurfaceButton x:Name="Browse" Style="{StaticResource browse}" Content="Browse" Width="100" MinHeight="0" Height="30" Canvas.Top="68" Canvas.Right="20" Click="Browse_Click" />
         </Canvas> 
     </Grid>
 </Window>
